fixed button animation on mobile

--- a/src/assets/less/contact.less
+++ b/src/assets/less/contact.less
@@ -130,11 +130,6 @@
                 background-color: var(--primary);
                 transition: width 0.3s ease;
             }
-
-            &:hover {
-                cursor: pointer;
-                background-color: var(--primary);
-            }
         }
 
         .cs-right-section {
